--- a/themes/shortshot/pages/home.html
+++ b/themes/shortshot/pages/home.html
@@ -1,8 +1,10 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="/th-res/css/bootstrap.min.css">
     </head>
     <body>
-        <h4>Always left </h4>
+        <div class="container">
+            <h4>Always left </h4>
+        </div>
     </body>
 </html>
