master: lognshot theme removed

--- a/themes/shortshot/pages/home.html
+++ b/themes/shortshot/pages/home.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="container">
-            <h4>Always left </h4>
+            {{.output | raw }}
         </div>
     </body>
 </html>
