master: PostByTags rendering function defined

--- a/themes/shortshot/pages/main.html
+++ b/themes/shortshot/pages/main.html
@@ -1,14 +1,17 @@
 <html>
 
 <head>
-        <link rel="stylesheet" href="/th-res/css/bootstrap.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body class="has-navbar-fixed-top has-background-light">
     {{ include "shortshot/pages/partials/navbar.html" }}
-    <div class="container">
+    <div class="container grid-lg">
     {{ .output |raw}}
+    {{ PostByTag("zoom")}}
     </div>
 </body>
 
