--- a/themes/shortshot/pages/tutorials.html
+++ b/themes/shortshot/pages/tutorials.html
@@ -13,16 +13,40 @@
 
     <div class="container grid-lg" style="padding: 20px 0;">
 
-
+  {{ .requestGetParam["hi"][0] }}
         <div class="columns">
-            {{ range PostByTag("tutorials")}}
+            {{ range PostByType("tutorial", 0, 19 )}}
                 <div class="column col-6">
                     {{ include "shortshot/pages/partials/singlePost.html" . }}
                 </div>
+
                 {{ else }}
                 <h5> No tutorials found.</h5>
             {{ end }}
         </div>
+        <ul class="pagination">
+            <li class="page-item disabled">
+              <a href="#" tabindex="-1">Previous</a>
+            </li>
+            <li class="page-item active">
+              <a href="#">1</a>
+            </li>
+            <li class="page-item">
+              <a href="#">2</a>
+            </li>
+            <li class="page-item">
+              <a href="#">3</a>
+            </li>
+            <li class="page-item">
+              <span>...</span>
+            </li>
+            <li class="page-item">
+              <a href="#">12</a>
+            </li>
+            <li class="page-item">
+              <a href="#">Next</a>
+            </li>
+          </ul>
 
     </div>
 </body>
