--- a/themes/shortshot/pages/404.html
+++ b/themes/shortshot/pages/404.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         404 Not Found
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <h1> Sorry ! </h1>
