--- a/themes/shortshot/pages/main.html
+++ b/themes/shortshot/pages/main.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ .Page.PageTitle }}</title>
 </head>
 
