master: shortshot theme updated

--- a/themes/shortshot/pages/main.html
+++ b/themes/shortshot/pages/main.html
@@ -15,8 +15,10 @@
     {{ include "shortshot/pages/partials/navbar.html" }}
 
     <div class="container grid-lg">
-    {{ .output | raw }}
+        {{ .output | raw }}
     </div>
+
+    {{ include "shortshot/pages/partials/footer.html" }}
 
 </body>
 
