--- a/themes/shortshot/pages/tutorials.html
+++ b/themes/shortshot/pages/tutorials.html
@@ -2,8 +2,8 @@
 <head>
     <title>{{ .Page.PageTitle }} | {{ SiteTitle() }}
     </title>
-    <meta name="keywords" content= "{{ .Page.MarchPageContent.Keywords }}">
-    <meta name="description" content= "{{ .Page.MarchPageContent.Desc }}">
+    <meta name="keywords" content= "{{ .Page.Content.Keywords }}">
+    <meta name="description" content= "{{ .Page.Content.Desc }}">
 
     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
     <link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css">
